Removed jQuery from dimmer.js

--- a/examples/test.html
+++ b/examples/test.html
@@ -8,7 +8,7 @@
 
   <!-- Site Properties -->
   <title>Test</title>
-  <link rel="stylesheet" type="text/css" href="../dist/semantic.css">
+  <link rel="stylesheet" type="text/css" href="../dist/vanilla-semantic.css">
 
   <script src="assets/library/jquery.min.js"></script>
   <script src="assets/library/iframe.js"></script>
